fix :root styling with dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,14 +5,14 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #c7d2fe;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #1e293b;
-    --foreground: #ededed;
+    --foreground: #c7d2fe;
   }
 }
 
